--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,7 +104,7 @@
                 <label class="form-check-label" for="dr">Dr.</label>
               </div>
             </div>
-            
+
           </div>
         </fieldset>
         <div class="form-group row">
@@ -160,11 +160,13 @@
           <label for="ageProof" class="col-sm-5 col-form-label">Age Proof</label>
           <div class="col-sm-7">
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="ageproofradio" id="schoolCertificate" value="schoolCertificate">
+              <input class="form-check-input" type="radio" name="ageproofradio" id="schoolCertificate"
+                value="schoolCertificate">
               <label class="form-check-label" for="schoolCertificate">School Certificate</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="ageproofradio" id="drivingLicense" value="drivingLicense">
+              <input class="form-check-input" type="radio" name="ageproofradio" id="drivingLicense"
+                value="drivingLicense">
               <label class="form-check-label" for="drivingLicense">Driving License</label>
             </div>
             <div class="form-check form-check-inline">
@@ -172,14 +174,15 @@
               <label class="form-check-label" for="passport">Passport</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="ageproofradio" id="birthCertificate" value="birthCertificate">
+              <input class="form-check-input" type="radio" name="ageproofradio" id="birthCertificate"
+                value="birthCertificate">
               <label class="form-check-label" for="birthCertificate">Birth Certificate</label>
             </div>
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="ageproofradio" id="panCard" value="panCard">
               <label class="form-check-label" for="panCard">PAN Card</label>
             </div>
-            
+
           </div>
         </div>
         <div class="form-group row">
@@ -219,11 +222,13 @@
           <label for="nationality" class="col-sm-5 col-form-label">Nationality</label>
           <div class="col-sm-7">
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="nationalityradio" id="residentIndianNational" value="residentIndianNational">
+              <input class="form-check-input" type="radio" name="nationalityradio" id="residentIndianNational"
+                value="residentIndianNational">
               <label class="form-check-label" for="residentIndianNational">Resident Indian National</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="nationalityradio" id="nonResidentIndian" value="nonResidentIndian">
+              <input class="form-check-input" type="radio" name="nationalityradio" id="nonResidentIndian"
+                value="nonResidentIndian">
               <label class="form-check-label" for="nonResidentIndian">Non Resident Indian</label>
             </div>
           </div>
@@ -238,7 +243,8 @@
           <label for="education" class="col-sm-5 col-form-label">Education</label>
           <div class="col-sm-7">
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="educationradio" id="postgraduateDoctorate" value="postgraduateDoctorate">
+              <input class="form-check-input" type="radio" name="educationradio" id="postgraduateDoctorate"
+                value="postgraduateDoctorate">
               <label class="form-check-label" for="postgraduateDoctorate">Postgraduate / Doctorate</label>
             </div>
             <div class="form-check form-check-inline">
@@ -254,11 +260,13 @@
               <label class="form-check-label" for="10thStdPass">10th std. Pass</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="educationradio" id="bellow10thstd" value="bellow10thstd">
+              <input class="form-check-input" type="radio" name="educationradio" id="bellow10thstd"
+                value="bellow10thstd">
               <label class="form-check-label" for="bellow10thstd">Bellow 10th std.</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="educationradio" id="illiterateUneducated" value="illiterateUneducated">
+              <input class="form-check-input" type="radio" name="educationradio" id="illiterateUneducated"
+                value="illiterateUneducated">
               <label class="form-check-label" for="illiterateUneducated">Illiterate / Uneducated</label>
             </div>
           </div>
@@ -296,33 +304,37 @@
         <div class="form-group row">
           <label for="addressProof" class="col-sm-5 col-form-label">Address Proof</label>
           <div class="col-sm-7">
-            
+
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="addressProofradio" id="passport" value="passport">
               <label class="form-check-label" for="passport">Passport</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="addressProofradio" id="12thStdPass" value="12thStdPass">
-              <label class="form-check-label" for="12thStdPass">12th std. Pass</label>
+              <input class="form-check-input" type="radio" name="addressProofradio" id="drivinglicense"
+                value="drivinglicense">
+              <label class="form-check-label" for="drivinglicense">Driving License</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="addressProofradio" id="10thStdPass" value="10thStdPass">
-              <label class="form-check-label" for="10thStdPass">10th std. Pass</label>
+              <input class="form-check-input" type="radio" name="addressProofradio" id="voterid" value="voterid">
+              <label class="form-check-label" for="voterid">Voter ID</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="addressProofradio" id="bellow10thstd" value="bellow10thstd">
-              <label class="form-check-label" for="bellow10thstd">Bellow 10th std.</label>
+              <input class="form-check-input" type="radio" name="addressProofradio" id="bankStatement"
+                value="bankStatement">
+              <label class="form-check-label" for="bankStatement">Bank Statement</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="addressProofradio" id="illiterateUneducated" value="illiterateUneducated">
-              <label class="form-check-label" for="illiterateUneducated">Illiterate / Uneducated</label>
+              <input class="form-check-input" type="radio" name="addressProofradio" id="utilityBill"
+                value="utilityBill">
+              <label class="form-check-label" for="utilityBill">Utility Bill</label>
             </div>
           </div>
         </div>
         <div class="form-group row">
           <label for="permanentaddressOfCommunication" class="col-sm-5 col-form-label">Permanent Address</label>
           <div class="col-sm-7">
-            <input type="text" class="form-control" id="permanentaddressOfCommunication" placeholder="Permanent Address">
+            <input type="text" class="form-control" id="permanentaddressOfCommunication"
+              placeholder="Permanent Address">
           </div>
         </div>
         <div class="form-group row">
@@ -352,7 +364,31 @@
         <div class="form-group row">
           <label for="permanentaddressProof" class="col-sm-5 col-form-label">Address Proof</label>
           <div class="col-sm-7">
-            <input type="text" class="form-control" id="permanentaddressProof" placeholder="Make it Radio button">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="permanentaddressProofradio" id="permanentpassport"
+                value="permanentpassport">
+              <label class="form-check-label" for="permanentpassport">Passport</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="permanentaddressProofradio"
+                id="permanentdrivinglicense" value="permanentdrivinglicense">
+              <label class="form-check-label" for="permanentdrivinglicense">Driving License</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="permanentaddressProofradio" id="permanentvoterid"
+                value="permanentvoterid">
+              <label class="form-check-label" for="permanentvoterid">Voter ID</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="permanentaddressProofradio" id="permanentbankStatement"
+                value="permanentbankStatement">
+              <label class="form-check-label" for="permanentbankStatement">Bank Statement</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="permanentaddressProofradio" id="permanentutilityBill"
+                value="permanentutilityBill">
+              <label class="form-check-label" for="permanentutilityBill">Utility Bill</label>
+            </div>
           </div>
         </div>
         <div>
@@ -388,43 +424,83 @@
         <div class="form-group row">
           <label for="preferredMode" class="col-sm-5 col-form-label">Preferred Mode</label>
           <div class="col-sm-7">
-            <input type="text" class="form-control" id="preferredMode" placeholder="Make it Radio button">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="letter" value="letter">
+              <label class="form-check-label" for="letter">Letter</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="emailradio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+
           </div>
         </div>
         <div class="form-group row">
           <label for="preferredLanguage" class="col-sm-5 col-form-label">Preferred Language for Letter</label>
           <div class="col-sm-7">
-            <input type="text" class="form-control" id="preferredLanguage" placeholder="Make it radion button">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="preferredmoderadio" id="preferredmoderadio" value="emailradio">
+              <label class="form-check-label" for="emailradio">E-mail</label>
+            </div>
           </div>
         </div>
         <div class="form-group row">
-          <label for="nameOccupation" class="col-sm-5 col-form-label">Full Name of the Employer/Business/School/College</label>
+          <label for="nameOccupation" class="col-sm-5 col-form-label">Full Name of the
+            Employer/Business/School/College</label>
           <div class="col-sm-7" style="padding-top: 20px">
             <input type="text" class="form-control" id="nameOccupation" placeholder="">
           </div>
         </div>
         <div class="form-group row">
-          <label for="natureOfWork" class="col-sm-5 col-form-label">Designation & Exact nature of Work / Business</label>
+          <label for="natureOfWork" class="col-sm-5 col-form-label">Designation & Exact nature of Work /
+            Business</label>
           <div class="col-sm-7">
-            <input type="text" class="form-control" id="natureOfWork" placeholder="Designation & Exact nature of Work / Business">
+            <input type="text" class="form-control" id="natureOfWork"
+              placeholder="Designation & Exact nature of Work / Business">
           </div>
         </div>
         <div class="form-group row">
           <label for="annualIncome" class="col-sm-5 col-form-label">Annual Income in Figures({{ '&#8377;'}})</label>
-          <div class="col-sm-7" >
+          <div class="col-sm-7">
             <input type="text" class="form-control" id="annualIncome" placeholder="Annual Income">
           </div>
         </div>
         <div class="form-group row">
-          <label for="annualIncomeFather" class="col-sm-5 col-form-label">Annual Income of Husband / Father (for female and minor lives)</label>
-          <div class="col-sm-7" style="padding-top: 15px" >
+          <label for="annualIncomeFather" class="col-sm-5 col-form-label">Annual Income of Husband / Father (for female
+            and minor lives)</label>
+          <div class="col-sm-7" style="padding-top: 15px">
             <input type="text" class="form-control" id="annualIncomeFather" placeholder="Annual Income">
           </div>
         </div>
 
         <div class="form-group row">
-          <label for="exactNatureOfWork" class="col-sm-5 col-form-label">Exact nature of work / business of Husband / Father for female and minor lives</label>
-          <div class="col-sm-7" >
+          <label for="exactNatureOfWork" class="col-sm-5 col-form-label">Exact nature of work / business of Husband /
+            Father for female and minor lives</label>
+          <div class="col-sm-7">
             <input type="text" class="form-control" id="exactNatureOfWork" placeholder="Nature of Work">
           </div>
         </div>
